--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	  <ol>
+    <li data-ns-test="shoppingList">New Laptop</li>
+    <li data-ns-test="shoppingList">Designer Watch</li>
+    <li data-ns-test="shoppingList">Gourmet Cooking Set</li>
+  </ol>
+
+<!--   <h3>Holiday Destinations:</h3> -->
+  <ul>
+    <li data-ns-test="holidayList">Bora Bora</li>
+    <li data-ns-test="holidayList">Santorini</li>
+    <li data-ns-test="holidayList">Maldives</li>
+  </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
